# data_structures

./: .clang-format  CMakeLists.txt  Makefile  README.md  a.out  main.c  single_linked_list.c  single_linked_list.h
coverage/: coverage.html  coverage.src_single_linked_list.c.html  coverage.test_test_single_linked_list.c.html  data_structures.gcda  test.xml  test_src.gcda
include/: binary_tree.h  methods_interface.h  single_linked_list.h
src/: CMakeLists.txt  binary_tree.c  binary_tree.h  btree.c  btree.h  hash_set.c  hash_set.h  main.c  single_linked_list.c  single_linked_list.h  stack.c  stack.h
src/lib/: CMakeLists.txt  single_linked_list.c
src/lib/includes/: single_linked_list.h
test/: CMakeLists.txt  run_tests.c  test_binary_tree.c  test_btree.c  test_data_structures.h  test_hash_set.c  test_single_linked_list.c  test_single_linked_list.cpp  test_stack.c
test/googletest/googlemock/docs/: cheat_sheet.md
util/: comparators.c  comparators.h  hash.c  hash.h  methods_interface.c  methods_interface.h
